gcc/testsuite/rust/rustc/ui/const-generics/outer-lifetime-in-const-generic-default_dg.rs
struct Foo<
    'a,
    const N: usize = {
        let x: &'a ();
// { dg-error "" "" { target *-*-* } .-1 }
        3
    },
>(&'a ());

fn main() {}

